<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.IshotLK.account"
    android:background="@drawable/mt3">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="921dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/TVcameralk8"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:text="@string/TVcameralk"
            android:textAlignment="center"
            android:textSize="45sp"
            android:translationX="90sp"
            android:translationY="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="125dp"
            android:layout_height="118dp"
            android:translationX="150sp"
            android:translationY="100sp"
            app:srcCompat="@drawable/profile2" />

        <ImageView
            android:id="@+id/order"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:translationX="20sp"
            app:srcCompat="@drawable/order" />

        <ImageView
            android:id="@+id/offers"
            android:layout_width="62dp"
            android:layout_height="56dp"
            android:translationX="320sp"
            android:translationY="-60sp"
            app:srcCompat="@drawable/offer" />

        <TextView
            android:id="@+id/tvname"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:translationX="30sp" />

        <EditText
            android:id="@+id/edtname2"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ptname"
            android:inputType="text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:translationX="30sp" />

        <TextView
            android:id="@+id/tvemailin"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:translationX="30sp"
            android:translationY="10sp" />

        <EditText
            android:id="@+id/edtemailin"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ptemail"
            android:inputType="text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:translationX="30sp"
            android:translationY="5sp"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tvmobile"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="20sp"
            android:translationX="30sp"
            android:translationY="15sp" />

        <EditText
            android:id="@+id/edtmobile"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ptmobile"
            android:inputType="text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:translationX="30sp"
            android:translationY="10sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp"
            android:translationX="30sp"
            android:translationY="20sp" />

        <EditText
            android:id="@+id/ptaddress"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ptaddress"
            android:inputType="text"
            android:textSize="20sp"
            android:translationX="30sp"
            android:translationY="15sp" />

        <TextView
            android:id="@+id/tvpasin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:translationX="30sp"
            android:translationY="25sp" />

        <EditText
            android:id="@+id/edtpasswordin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ptpassword"
            android:inputType="text"
            android:textSize="20sp"
            android:translationX="30sp"
            android:translationY="15sp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btnlogout"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/btnlogout"
            android:translationY="50dp" />

        <FrameLayout
            android:id="@+id/fl_wrapper"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_above="@id/bottom_navigation2"
            android:layout_weight="1"
            tools:ignore="ObsoleteLayoutParam" >

        </FrameLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/roundedcorner"
            android:clipToOutline="true"
            android:translationY="10dp"
            app:itemBackground="@drawable/orange2"
            app:itemIconTint="@color/white"
            app:menu="@menu/navbar"
            tools:ignore="ObsoleteLayoutParam" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>