<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart"
    android:background="@drawable/mt6">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="921dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/btnback"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:translationX="-10dp"
            android:translationY="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/TVcameralk10"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/mycart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:text="@string/mycart"
            android:textAlignment="center"
            android:textSize="34sp"
            android:translationY="0dp" />

        <Button
            android:id="@+id/btnbuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:padding="10dp"
            android:text="@string/btnbuy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:translationX="100sp"
            android:translationY="-180sp" />

        <Button
            android:id="@+id/btnrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#ececec"
            android:padding="10dp"
            android:text="@string/btnrent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:translationX="230sp"
            android:translationY="-465sp" />


        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="370dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:outlineAmbientShadowColor="@color/gray1"
            android:translationY="-400dp"
            app:srcCompat="@drawable/cartrectangle" />

        <ImageView
            android:id="@+id/buycam2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:translationX="20dp"
            android:translationY="-550dp"
            app:srcCompat="@drawable/cam1" />


        <TextView
            android:id="@+id/card"
            android:layout_width="166dp"
            android:layout_height="34dp"
            android:text="@string/cartcamname"
            android:textSize="20sp"
            android:translationX="180sp"
            android:translationY="-680sp" />

        <ImageView
            android:id="@+id/minbtn"
            android:layout_width="25dp"
            android:layout_height="77dp"
            android:translationX="280dp"
            android:translationY="-690dp"
            app:srcCompat="@drawable/minbtn" />

        <TextView
            android:id="@+id/tvqty"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:text="@string/tvqty"
            android:textAlignment="center"
            android:textSize="30sp"
            android:translationX="310sp"
            android:translationY="-750sp" />

        <ImageView
            android:id="@+id/maxbtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:translationX="350dp"
            android:translationY="-780dp"
            app:srcCompat="@drawable/maxbtn" />

        <TextView
            android:id="@+id/cartcamprice"
            android:layout_width="166dp"
            android:layout_height="34dp"
            android:text="@string/cartcamprice"
            android:textSize="20sp"
            android:translationX="180sp"
            android:translationY="-780sp" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="370dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:outlineAmbientShadowColor="@color/gray1"
            android:translationY="-700dp"
            app:srcCompat="@drawable/cartrectangle" />

        <ImageView
            android:id="@+id/cartlens"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:translationX="20dp"
            android:translationY="-850dp"
            app:srcCompat="@drawable/lens2" />

        <TextView
            android:id="@+id/cod"
            android:layout_width="227dp"
            android:layout_height="34dp"
            android:text="@string/cartlensname"
            android:textSize="20sp"
            android:translationX="180sp"
            android:translationY="-980sp" />

        <ImageView
            android:id="@+id/minbtn2"
            android:layout_width="25dp"
            android:layout_height="77dp"
            android:translationX="280dp"
            android:translationY="-990dp"
            app:srcCompat="@drawable/minbtn" />

        <TextView
            android:id="@+id/tvqty2"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:text="@string/tvqty"
            android:textAlignment="center"
            android:textSize="30sp"
            android:translationX="310sp"
            android:translationY="-1050sp" />

        <ImageView
            android:id="@+id/maxbtn2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:translationX="350dp"
            android:translationY="-1080dp"
            app:srcCompat="@drawable/maxbtn" />

        <TextView
            android:id="@+id/cartlensprice"
            android:layout_width="166dp"
            android:layout_height="34dp"
            android:text="@string/cartlensprice"
            android:textSize="20sp"
            android:translationX="180sp"
            android:translationY="-1080sp" />

        <TextView
            android:id="@+id/tvtotal"
            android:layout_width="151dp"
            android:layout_height="42dp"
            android:fontFamily="@font/carlito"
            android:text="@string/tvtotal"
            android:textSize="28sp"
            android:translationX="40dp"
            android:translationY="-970dp" />

        <TextView
            android:id="@+id/totalprice"
            android:layout_width="214dp"
            android:layout_height="42dp"
            android:fontFamily="@font/carlito"
            android:text="@string/totalprice"
            android:textSize="28sp"
            android:translationX="230dp"
            android:translationY="-1010dp" />

        <Button
            android:id="@+id/btncheckout"
            android:layout_width="250sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange2"
            android:text="@string/btncheckout"
            android:translationY="-980dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>